tests/machine/x/c/for_list_collection.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/for_list_collection.c:17:3: error: conflicting types for ‘list_int’; have ‘struct <anonymous>’
   17 | } list_int;
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/for_list_collection.c:7:3: note: previous declaration of ‘list_int’ with type ‘list_int’
    7 | } list_int;
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/for_list_collection.c:18:17: error: conflicting types for ‘list_int_create’; have ‘list_int(int)’
   18 | static list_int list_int_create(int len) {
      |                 ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/for_list_collection.c:8:17: note: previous definition of ‘list_int_create’ with type ‘list_int(int)’
    8 | static list_int list_int_create(int len) {
      |                 ^~~~~~~~~~~~~~~

   1: #include <stdio.h>
